# ToyGraph

./: README.md  ToyGraph.sln
Demo/: CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters  main.cpp
Demo/shaders/: lightSourceShader.frag  shader.frag  shader.vert
LightingDemo/: LightingDemo.vcxproj  LightingDemo.vcxproj.filters  main.cpp
MeshLoadingDemo/: MeshLoadingDemo.vcxproj  MeshLoadingDemo.vcxproj.filters  main.cpp
OrbitDemo/: OrbitDemo.vcxproj  OrbitDemo.vcxproj.filters  Planet.cpp  Planet.h  PlanetScene.cpp  PlanetScene.h  main.cpp
SceneDemo/: NahidaScene.cpp  NahidaScene.h  NilouScene.cpp  SceneDemo.vcxproj  SceneDemo.vcxproj.filters  (+1 more)
ToyGraph/: CMakeLists.txt  ToyGraph.vcxproj  ToyGraph.vcxproj.filters
ToyGraph/components/Shader/: Shader.cpp
ToyGraph/components/ToyGraph/Actor/: Actor.cpp
ToyGraph/components/ToyGraph/AppRuntime/: AppRuntime.cpp
ToyGraph/components/ToyGraph/Camera/: Camera.cpp
ToyGraph/components/ToyGraph/Engine/: Engine.cpp
ToyGraph/components/ToyGraph/Model/: Mesh.cpp  Model.cpp  Texture.cpp
ToyGraph/components/ToyGraph/Scene/: Scene.cpp  SceneManager.cpp
ToyGraph/components/ToyGraph/Shader/: Shader.cpp
ToyGraph/components/ToyGraph/Skybox/: Skybox.cpp
ToyGraph/components/ToyGraph/Texture/: Texture.cpp
ToyGraph/components/ToyGraphCommon/: CharEncodingConverter.cpp  Random.cpp
ToyGraph/demo/: main.cpp
ToyGraph/include/ToyGraph/: Actor.h  AppRuntime.h  Camera.h  Engine.h  Shader.h  Texture.h
ToyGraph/include/ToyGraph/Model/: Mesh.h  Model.h  Texture.h
ToyGraph/lib/lib/: glfw3.lib
ToyGraph/lib/src/: glad.c
(+17 files in other folders)
